// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Menu Menu can render 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-1 {
  color: #7a7e82!important;
}

.emotion-1:hover {
  color: white;
}

.emotion-2 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-3 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width: 768px) {
  .emotion-3 {
    padding: 50px 20px;
  }
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-0"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-1"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                />
              </div>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with error 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-1 {
  color: #7a7e82!important;
}

.emotion-1:hover {
  color: white;
}

.emotion-2 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-3 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width: 768px) {
  .emotion-3 {
    padding: 50px 20px;
  }
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-7 {
  margin: 20px 0;
}

.emotion-8 {
  text-align: left;
}

<div>
    <button
      class="bp3-button emotion-0"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-1"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                />
              </div>
              <div
                class="bp3-callout bp3-intent-danger bp3-callout-icon emotion-7"
              >
                <span
                  class="bp3-icon bp3-icon-error"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <h4
                  class="bp3-heading"
                >
                  [401]  Not authorized. 
                </h4>
                <pre
                  class="emotion-8"
                >
                  {
  "response": {
    "status": 401,
    "statusText": "Not authorized",
    "data": ""
  }
}
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with links 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-1 {
  color: #7a7e82!important;
}

.emotion-1:hover {
  color: white;
}

.emotion-2 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-3 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width: 768px) {
  .emotion-3 {
    padding: 50px 20px;
  }
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 35px;
}

.emotion-7 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-8 {
  color: #cecece;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  -webkit-flex-basis: 300px;
  -ms-flex-preferred-size: 300px;
  flex-basis: 300px;
  padding: 5px 0;
  color: #cecece;
}

.emotion-8:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
    <button
      class="bp3-button emotion-0"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-1"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                />
              </div>
              <div>
                <span />
                <div
                  class="emotion-7"
                >
                  <a
                    class="emotion-8"
                    href="/first-tab/"
                  >
                    First Tab
                  </a>
                  <a
                    class="emotion-8"
                    href="https://github.com/cashapp/misk-web"
                  >
                    Misk Web Repo
                  </a>
                  <a
                    class="emotion-8"
                    href="/palette/"
                  >
                    Palette
                  </a>
                  <a
                    class="emotion-8"
                    href="/second-tab/"
                  >
                    Second Tab
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with links and rendered navbar items 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-1 {
  color: #7a7e82!important;
}

.emotion-1:hover {
  color: white;
}

.emotion-2 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-3 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width: 768px) {
  .emotion-3 {
    padding: 50px 20px;
  }
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-bottom: 35px;
}

.emotion-7 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-8 {
  color: #cecece;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  -webkit-flex-basis: 300px;
  -ms-flex-preferred-size: 300px;
  flex-basis: 300px;
  padding: 5px 0;
  color: #cecece;
}

.emotion-8:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
    <button
      class="bp3-button emotion-0"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-1"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <span>
                    <span>
                      Navbar Item Alpha
                    </span>
                  </span>
                  <span>
                    <span>
                      Navbar Item Bravo
                    </span>
                  </span>
                </div>
              </div>
              <div>
                <span />
                <div
                  class="emotion-7"
                >
                  <a
                    class="emotion-8"
                    href="/first-tab/"
                  >
                    First Tab
                  </a>
                  <a
                    class="emotion-8"
                    href="https://github.com/cashapp/misk-web"
                  >
                    Misk Web Repo
                  </a>
                  <a
                    class="emotion-8"
                    href="/palette/"
                  >
                    Palette
                  </a>
                  <a
                    class="emotion-8"
                    href="/second-tab/"
                  >
                    Second Tab
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with rendered navbar items 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #29333a!important;
  box-shadow: none!important;
  background-image: none!important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-1 {
  color: #7a7e82!important;
}

.emotion-1:hover {
  color: white;
}

.emotion-2 {
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-3 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width: 768px) {
  .emotion-3 {
    padding: 50px 20px;
  }
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width: 768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width: 992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width: 1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-5 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-6 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-0"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-1"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-2"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-undefinedpx);"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <span>
                    <span>
                      Navbar Item Alpha
                    </span>
                  </span>
                  <span>
                    <span>
                      Navbar Item Bravo
                    </span>
                  </span>
                </div>
              </div>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
